apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:v3.41.3
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: tun-device
              mountPath: /dev/net/tun
            - name: config
              mountPath: /gluetun
              subPath: gluetun
          ports:
            - containerPort: 8080
            - containerPort: 5010
            - containerPort: 52000
              protocol: TCP
            - containerPort: 52000
              protocol: UDP

        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.2.4
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: qbittorrent
            - name: downloads
              mountPath: /downloads

        - name: mousehole
          image: tmmrtn/mousehole:0.5.0
          volumeMounts:
            - name: config
              mountPath: /var/lib/mousehole
              subPath: mousehole

      volumes:
        - name: tun-device
          hostPath:
            path: /dev/net/tun
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
