apps/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: qbittorrent.webernet.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
    - host: mousehole.webernet.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mousehole-web
                port:
                  number: 5010
